<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/button_cosntraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/toggleButton_sat"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/saturday_abbreviation"
        android:textOn="@string/saturday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_fri"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_mon"
        app:layout_constraintVertical_bias="0.397" />

    <ToggleButton
        android:id="@+id/toggleButton_sun"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/sunday_abbreviation"
        android:textOn="@string/sunday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_sat"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_mon"
        app:layout_constraintVertical_bias="0.397" />

    <ToggleButton
        android:id="@+id/toggleButton_fri"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/friday_abbreviation"
        android:textOn="@string/friday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_mon"
        app:layout_constraintVertical_bias="0.397" />

    <ToggleButton
        android:id="@+id/toggleButton_thu"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/thursday_abbreviation"
        android:textOn="@string/thursday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_wed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <ToggleButton
        android:id="@+id/toggleButton_wed"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/wednesday_abbreviation"
        android:textOn="@string/wednesday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_tue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <ToggleButton
        android:id="@+id/toggleButton_tue"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/tuesday_abbreviation"
        android:textOn="@string/tuesday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_mon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <ToggleButton
        android:id="@+id/toggleButton_mon"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:text="Mo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textOff="@string/monday_abbreviation"
        android:textOn="@string/monday_abbreviation"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>